Fixing smaller image alignment

--- a/_sass/imports/_general.scss
+++ b/_sass/imports/_general.scss
@@ -415,6 +415,7 @@ img {
 
 .inner-small p.img-wrapper {
   max-width:100%;
+  text-align:center;
 }
 
 .inner-small {
